samples/_failures_safe/1761391105_5fe843_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c03a9d18.c: In function ‘main’:
./samples/SAFE/__tmp_c03a9d18.c:146:5: error: expected expression at end of input
  146 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_c03a9d18.c:146:5: error: expected declaration or statement at end of input
